# godot_entt_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main_scene.tscn  project.godot
.import/: create_dlscript.png-783f4e84180692e4c9d6cd68227290ed.md5  dllibrary_create_new_dllibrary.png-a05c1c0b5ad575e545a76d5e8f23a329.md5  dllibrary_create_new_resource.png-25c70021ab5fb6ab71168d34526bcc64.md5  dllibrary_save_as_resource.png-a1d9b898d5eb6b901d355d36ca6c8288.md5  set_project_dllibrary.png-7a4932ac13d0d8c899d47c9d9b4fe60f.md5  set_script_dllibrary.png-03bb19a0e793175be0eb24f5ef7aeb6b.md5
models/: Entity.tscn
src/: Entity.cpp  Entity.gdns  Entity.h  EntityManager.cpp  EntityManager.gdns  EntityManager.h  gdlibrary.cpp
